# rulebook

./: Cargo.toml  README.md
crates/example-guessing-game/: Cargo.toml
crates/example-guessing-game/client/: package-lock.json  vite.config.ts
crates/example-guessing-game/client/src/routes/: +page.svelte  channel.ts  logic-worker.ts
crates/example-guessing-game/client/static/: debug.wasm  release.wasm
crates/example-guessing-game/src/: lib.rs
crates/rulebook/: Cargo.toml
crates/rulebook-interface-types/: Cargo.toml
crates/rulebook-interface-types/src/: lib.rs
crates/rulebook-runtime/: Cargo.toml
crates/rulebook-runtime/src/: channel.rs  lib.rs  task.rs
crates/rulebook-server/: Cargo.toml
crates/rulebook-server/src/: http.rs  main.rs  websocket.rs
crates/rulebook-test-client/: Cargo.toml
crates/rulebook-test-client/src/: main.rs  websocket.rs
crates/rulebook/src/: lib.rs
