[package]
name = "rulebook-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tap.workspace = true

rulebook-interface-types ={path = "../rulebook-interface-types"}

wasmtime = "7.0"
async-trait = "0.1"
