[package]
name = "rulebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulebook-interface-types = {path = "../rulebook-interface-types"}

scoped-tls = "1.0"
anyhow = {version = "1.0", features = ["backtrace"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0", features = ["preserve_order", "float_roundtrip", "raw_value"]}
